--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@activeadmin/activeadmin": "4.0.0-beta15",
-    "tailwindcss": "^3.4.15",
+    "@rails/actiontext": "^8.0.200",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "trix": "^2.1.15"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify -c ./tailwind-active_admin.config.js"
